    Thus, instead of relying on the browser to render mathematical notation
    from MathML, the MathJax plugin is now assumed to be enabled on the
    Moodle server (which is the default when setting up a new Moodle server).
    To employ MathML one can use converter = NULL or converter = "pandoc-mathml"
    etc. See the discussion at http://www.R-exams.org/tutorials/math/ for more
    details.

  o Assure in nops_scan() that scanned image file names contain no spaces.

  o Fixed bugs in exams2qti21() (and hence exams2openolat()) for certain
    combinations of 'maxchars' specifications in 'string' exercises.

  o Added \usepackage[...]{babel} support to "language" specification of
    exams2nops(). In addition to a new "Babel: ..." field, the .dcf can
    also provide a "Header: ..." field, e.g., for changing the font encoding
    or adding further options.

  o Added "envir" argument in exams2moodle() that is passed on to xweave().

  o The print() method for "exams_metainfo" objects received a new "block"
    argument so that print(exams_metainfo(x), which = 1, block = 5) prints
    the metainformation (type/solution) of the first exam in the object x
    (output from any exams2xyz() function) in blocks of 5 exercises.

  o For exams2openolat() the handling of the internal pandoc fixups was
    extended to replace align="right" in tables with style="text-align: right;"
    (and analogously for "left" and "center").

  o In nops_eval() duplicated sheets (original + replacement) were sometimes
    omitted even if the student ID was just 000000 (i.e., not read correctly
    by nops_scan()). A check has been added that avoids this.

  o Changed the default of fix_choice in exams2arsnova(). Current versions of
    the official ARSnova server (https://arsnova.eu/) have the LaTeX rendering
    in the choice options switched off. Hence, by setting fix_choice = TRUE
    by default the LaTeX math markup is removed.
