@@ -1,6 +1,6 @@
 Package: exams
 Version: 2.3-3
-Date: 2018-12-08
+Date: 2019-07-03
 Title: Automatic Generation of Exams in R
 Authors@R: c(person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org",
                     comment = c(ORCID = "0000-0003-0918-3766")),
